fix: enhance line height for improved readability and adjust markdown alert margin

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,6 +22,10 @@
     margin-bottom: inherit;
 }
 
+.prose {
+    line-height: 1.5;
+}
+
 /* Table Of Content */
 .toc-wrapper {
     display: flex;
