--- a/src/styles/markdown-alerts.css
+++ b/src/styles/markdown-alerts.css
@@ -1,6 +1,6 @@
 .markdown-alert {
     padding: .5rem 1rem;
-    margin: 1rem 0;
+    margin: 1.5rem 0;
     border-left: .25em solid;
     border-radius: .3rem;
 }
